--- a/app/webroot/css/mb_common.css
+++ b/app/webroot/css/mb_common.css
@@ -91,10 +91,15 @@ header {
 
 
 #logo {
+   position: absolute;
    display: inline;
    float: left;
+   height: 44px;
+   width: 100%;
    margin: 0;
    padding: 0;
+   background-color : #FFFFFF;
+   z-index: 998;
 }
 
 
@@ -113,6 +118,7 @@ header {
    display: block;
    right: 0px;
    height: 44px;
+   z-index: 999;
 }
 
 #menu_on {
@@ -120,13 +126,15 @@ header {
    display: none;
    right: 0px;
    height: 44px;
+   z-index: 999;
 }
 
 .menu {
    position: absolute;
-   display: none;
-   top: 44px;
-   z-index: 999;
+   display: block;
+   top: -136px;
+   z-index: 997;
+   transition: all 0.5s ease 0.0s;
 }
 
 .menu a {
