top noneズレを修正

--- a/app/webroot/css/top.css
+++ b/app/webroot/css/top.css
@@ -21,6 +21,14 @@ ul,li,h2,h3,p {
 }
 
 
+.noneS {
+    padding: 30px 0;
+    font-size: 24px;
+    text-align: center;
+    color: #f5f5f5;
+}
+
+
 
 
 
