--- a/app/webroot/css/mb_common.css
+++ b/app/webroot/css/mb_common.css
@@ -132,9 +132,10 @@ header {
 .menu {
    position: absolute;
    display: block;
-   top: -136px;
+   height: 44px;
+   bottom: 200px;
    z-index: 997;
-   transition: all 0.5s ease 0.0s;
+   transition: all 0.25s ease 0.0s;
 }
 
 .menu a {
