プロフィールページ完成

--- a/app/webroot/css/profile.css
+++ b/app/webroot/css/profile.css
@@ -20,6 +20,9 @@ li {
 img {
 	vertical-align: bottom;
 }
+.hidden {
+	display: none;
+}
 
 
 
@@ -44,7 +47,20 @@ h3 rt {
 }
 section {
 	background: #fff;
+	padding: 0 0 154px;
+}
+section.second {
+	background: #4cbdce;
+	position: relative;
+}
+section.third {
+	background: #267581;
+	position: relative;
 	padding: 0 0 60px;
+}
+section .wrapper {
+	width: 978px;
+	margin: 0 auto;
 }
 .wrapper {
 	width: 978px;
@@ -56,7 +72,6 @@ section {
 .left {
 	width: 222px;
 	height: 222px;
-	overflow: hidden;
 }
 .center {
 	width: 558px;
@@ -117,6 +132,67 @@ td {
 #ImgUpForm {
 	width: 222px;
 	height: 222px;
+	overflow: hidden;
+	position: relative;
+}
+#ImgUpForm > * {
+	position: absolute;
+}
+#ImgUpForm .menu {
+	bottom: 0;
+	left: 0;
+}
+#ImgUpForm ul {
+	width: 222px;
+}
+#ImgUpForm li {
+	width: 110px;
+	height: 40px;
+	float: left;
+	background: rgba(0,0,0,0.7);
+	overflow: hidden;
+	border-left: solid 1px #333;
+}
+#ImgUpForm li:first-child {
+	border-right: solid 1px #555;
+	border-left: none;
+}
+#ImgUpForm li a {
+	color: #fff;
+	text-decoration: none;
+	font-size: 12px;
+	display: block;
+	width: 111px;
+	text-align: center;
+	height: 100%;
+	padding-top: 10px;
+}
+#ImgUpForm li a:hover {
+	opacity: 0.75;
+}
+.card {
+	float: left;
+	margin: 30px 0 0 30px;
+}
+.seminarsArea {
+	width: 1008px;
+	margin: -30px 0 0 -30px;
+	padding: 74px 0 0;
+}
+.second h2,
+.third h2 {
+	position: absolute;
+	background: none;
+	text-align: center;
+	width: 100%;
+	top: -65px;
+	left: 0px;
+	margin: 0;
+	padding: 0
+}
+.seminarsArea > p {
+	padding: 0 30px;
+	color: #fff;
 }
 
 
