質問ページコーディング完了

--- a/app/webroot/css/control3.css
+++ b/app/webroot/css/control3.css
@@ -29,6 +29,10 @@ textarea {
 	font-size: 24px;
 	height: 250px;
 }
+#commentForm textarea {
+	height: 120px;
+	font-size: 18px;
+}
 .text:focus,
 .textarea:focus {
 	outline: 0;
