セミナー詳細半角文字の連続がはみ出る問題修正

--- a/app/webroot/css/seminars.css
+++ b/app/webroot/css/seminars.css
@@ -243,6 +243,9 @@ section .wrapper dl dd .btnArea > a:first-child {
 #newSmnConfirm dd p {
 	padding-bottom: 10px;
 }
+#newSmnConfirm article {
+	word-wrap: break-word;
+}
 #ButtonDetailsForm {
 	padding: 30px 0 0;
 }
