--- a/app/webroot/css/mb_top.css
+++ b/app/webroot/css/mb_top.css
@@ -124,11 +124,18 @@ ul.topTab li.active {
 
 #needsArea li {
     width: 93.75%;
-    height: 38px;
+    height: 44px;
     margin: 0 auto 5px auto;
-    padding: 8px 0;
+    padding: 0;
     list-style: none;
+    font-size: 15px;
+    font-weight: 500;
     background: #fff;
+}
+
+
+#needsArea li:last-child {
+    margin: 0 auto;
 }
 
 
@@ -149,7 +156,9 @@ ul.topTab li.active {
 
 
 .needsWrapper {
+    position: relative;
     width: 100%;
+    height: 100%;
 }
 
 
@@ -159,19 +168,32 @@ ul.topTab li.active {
 
 
 .needsWrapper .left {
+    position: absolute;
+    top: 0;
+    left: 0;
     overflow: hidden;
-    width: 65%;
-    padding: 4px 0 0 20px;
+    box-sizing: border-box;
+    width: 70%;
+    height: 100%;
+    padding: 11px 0 0 15px;
     white-space: nowrap;
     text-overflow: ellipsis;
 }
 
 
 .needsWrapper .middle {
-    float: right;
-    padding: 5px 20px 0 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+    box-sizing: border-box;
+    width: 107px;
+    height: 100%;
+    margin: 0;
+    padding: 11px 20px 0 0;
     text-align: right;
-    color: #48b2c2;
+    color: #fff;
+    background: url(../img/mb_img/needs_np_bg.png) no-repeat;
+    background-size: cover;
 }
 
 
