--- a/app/webroot/css/common.css
+++ b/app/webroot/css/common.css
@@ -58,6 +58,31 @@ img{
 }
 
 
+.modal > .wrapper {
+	width: 757px;
+	position: absolute;
+	z-index: 10;
+}
+
+
+.modal .bg {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 2;
+}
+
+
+.modal li {
+	display: block;
+	width: 342px;
+	height: 160px;
+	overflow: hidden;
+}
+
+
 
 
 
