;のつけ忘れ、微調整

--- a/app/webroot/css/mb_seminars.css
+++ b/app/webroot/css/mb_seminars.css
@@ -312,7 +312,8 @@ section .wrapper dl dd .btnArea > a:first-child {
 	line-height: 20px
 }
 #seminarQ .noq {
-	text-align: center
+	text-align: center;
+	color: #333;
 }
 #seminarQ li a {
 	position: absolute;
