--- a/app/webroot/css/seminars.css
+++ b/app/webroot/css/seminars.css
@@ -150,6 +150,7 @@ section .wrapper dl dd .btnArea > a:first-child {
 #newSmnConfirm {
 	color: #656565;
 	font-size: 16px;
+	margin-top: 2px;
 }
 #newSmnConfirm .wrapper,
 #seminarQ .wrapper {
@@ -165,12 +166,17 @@ section .wrapper dl dd .btnArea > a:first-child {
 }
 #newSmnConfirm #coverArea {
 	width: 100%;
-	height: 200px;
+	height: 300px;
 	overflow: hidden;
 	margin-top: -60px;
+	background: #eee;
+	border: none;
 }
 #newSmnConfirm #coverArea img {
+	border: none;
 	width: 100%;
+	border:none;
+
 }
 #newSmnConfirm .cf {
 	width: 978px;
