--- a/app/webroot/css/mb_seminars.css
+++ b/app/webroot/css/mb_seminars.css
@@ -465,6 +465,50 @@ section .wrapper dl dd .btnArea > a:first-child {
 	margin: 10px auto;
 }
 
+/* Feedback
+----------------------------------------------------------------------*/
+
+.feedbackWrapper {
+	margin: 0px 10px;
+	margin-bottom: 15px;
+	padding: 20px 0px 10px 0px;
+	background-color: #fff;
+}
+
+.feedbackWrapper .inner {
+	margin: 0 15px;
+}
+
+#feedbackTitle h3 {
+	color: #656565;
+	font-size: 17px;
+}
+
+.feedbackTextWrapper {
+	margin-bottom: 10px;
+	color: #4cbdce;
+	font-size: 12px;
+}
+
+#feedbackGood {
+	margin-top: 25px;
+	margin-bottom: 10px;
+}
+
+#goodBtn {
+	height: 40px;
+}
+
+#solutionBtn {
+	height: 40px;
+}
+
+#feedbackEnd {
+	width: 299px;
+	margin: 0 auto;
+}
+
+
 /* join & cancel
 ----------------------------------------------------------------------*/
 
