新規アカウント登録ページ完成

--- a/app/webroot/css/new_acc.css
+++ b/app/webroot/css/new_acc.css
@@ -9,13 +9,14 @@
 ----------------------------------*/
 
 
-html,body {
-    width: 100%;
-    min-width: 978px;
-    height: 100%;
+html,
+body {
     font-family: Helvetica,'Hiragino Kaku Gothic ProN','ヒラギノ角ゴ ProN W3',Meiryo,メイリオ,sans-serif;
     font-size: 12px;
     line-height: 1.4;
+    width: 100%;
+    min-width: 978px;
+    height: 100%;
     letter-spacing: .02em;
     background: #fff;
 }
@@ -94,7 +95,10 @@ p {
     width: calc(118px*.8);
     height: calc(88px*.8);
 }
-.navi_2,.navi_3,.navi_4,.navi_5 {
+.navi_2,
+.navi_3,
+.navi_4,
+.navi_5 {
     float: left;
     width: calc(118px*.8);
     height: calc(88px*.8);
@@ -102,8 +106,8 @@ p {
 }
 
 .container_body {
-	text-align: center;
     margin: 0 auto;
+    text-align: center;
     color: #45acbb;
 }
 
@@ -113,28 +117,29 @@ p {
     color: #45acbb;
 }
 
+
 .start_new_acc_title {
+    font-size: 17pt;
     width: 474px;
     margin: 80px auto 60px auto;
     padding-left: 60px;
-    font-size: 17pt;
     text-align: left;
     letter-spacing: 1px;
 }
 
 .new_acc_p {
+    font-weight: bold;
     width: 474px;
     margin: 0 auto;
     padding-left: 60px;
-    font-weight: bold;
     text-align: left;
 }
 
 .email_title {
+    font-size: 14pt;
     float: left;
     /*font-weight: bold;*/
     margin-top: 5px;
-    font-size: 14pt;
     color: #4cbdce;
 }
 .email_form {
@@ -182,16 +187,16 @@ p {
 ----------------------------------------------------------------------*/
 
 .mail_new_acc_title {
-    margin: 60px auto 40px auto;
     font-size: 18px;
+    margin: 60px auto 40px auto;
     letter-spacing: .04em;
 }
 
 .mail_acc_p {
+    font-weight: bold;
     width: 474px;
     margin: 0 auto;
     padding-left: 100px;
-    font-weight: bold;
     text-align: left;
 }
 
@@ -205,34 +210,34 @@ p {
 }
 
 .entry_dl dt {
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 1;
     float: left;
     box-sizing: border-box;
     width: 194px;
     height: auto;
     margin: 0;
     padding: 23px 0 10px 10px;
-    font-size: 14px;
-    font-weight: 600;
-    line-height: 1;
     border-top: 1px solid #45acbb;
 }
 
 .entry_dl dd {
+    font-size: 16px;
+    line-height: 1;
     display: inline-block;
     box-sizing: border-box;
     width: 577px;
     height: auto;
     margin: 0;
     padding: 14px 0 14px 29px;
-    font-size: 16px;
-    line-height: 1;
     border-top: 1px solid #45acbb;
     border-left: 1px solid #45acbb;
 }
 
 
 #mailaddress {
-	border: none;
+    border: none;
 }
 .last {
     border-bottom: 1px solid #45acbb;
@@ -310,10 +315,12 @@ span.confirm {
 }
 
 .pr {
+    line-height: 1.2;
+    float: left;
     width: 390px;
     height: 200px;
+    margin-bottom: 4px;
     resize: none;
-    line-height: 1.2;
 }
 
 .btn {
@@ -327,13 +334,125 @@ span.confirm {
             background-size: 100%;
 }
 
-.errorMsg{
-    color: #fd5812;
+.errorMsg {
     font-size: 12px;
+    color: #fd5812;
 }
 
-.errorMsg2{
-    color: #fd5812;
+.errorMsg2 {
     font-size: 12px;
     margin-left: 20px;
+    color: #fd5812;
+}
+
+
+.errorMsg3 {
+    font-size: 12px;
+    line-height: 1.4;
+    display: inline-block;
+    float: left;
+    width: 120px;
+    margin: -4px 0 0 10px;
+    color: #fd5812;
+}
+
+
+
+/* account_confirm
+----------------------------------------------------------------------*/
+.confirm_dl {
+    width: 772px;
+    margin-top: 60px;
+    text-align: left;
+}
+
+.confirm_dl dt {
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 1;
+    float: left;
+    box-sizing: border-box;
+    width: 194px;
+    height: auto;
+    margin: 0;
+    padding: 19px 0 15px 10px;
+    border-top: 1px solid #45acbb;
+}
+
+.confirm_dl dd {
+    font-size: 16px;
+    line-height: 1;
+    display: inline-block;
+    box-sizing: border-box;
+    width: 578px;
+    height: auto;
+    margin: 0;
+    padding: 18px 0 14px 29px;
+    border-top: 1px solid #45acbb;
+    border-left: 1px solid #45acbb;
+}
+
+#confirmNameDt {
+    padding: 37px 0 15px 10px;
+}
+
+.nameRuby {
+    font-size: 12px;
+    display: block;
+    margin-bottom: 9px;
+}
+
+.confirmName {
+    font-size: 30px;
+    display: block;
+}
+
+.last {
+    border-bottom: 1px solid #45acbb;
+}
+
+.registBtnArea {
+    margin: 40px auto 123px auto;
+    text-align: center;
+}
+
+.regist {
+    width: 222px;
+    margin: 0 30px 0 0;
+    padding: 0;
+}
+
+.regist2 {
+    width: 222px;
+    margin: 0;
+    padding: 0;
+}
+
+
+
+/* account_complete
+----------------------------------------------------------------------*/
+.container_body_complete {
+    width: 772px;
+    margin: 0 auto;
+    text-align: center;
+    color: #45acbb;
+}
+
+
+.container_body_complete h2 {
+    font-size: 30px;
+    margin-top: 80px;
+    color: #4cbdce;
+}
+
+.container_body_complete p {
+    font-size: 18px;
+    margin-top: 60px;
+    color: #4cbdce;
+}
+
+.goLogin {
+    width: 222px;
+    margin-top: 40px;
 }
